--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.15",
+    "formik": "^2.2.9",
+    "framer-motion": "^5.3.1",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3",
+    "styled-reset": "^4.3.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "16.11.9",
