--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.15",
+    "@types/uuid": "^8.3.3",
     "formik": "^2.2.9",
     "framer-motion": "^5.3.1",
     "next": "12.0.4",
@@ -16,6 +17,7 @@
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4",
+    "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
